# r-workspace

./: .gitignore  README.md  RELEASE_NOTES.md  docker-compose.yml  sbom.spdx.json
backend/: Dockerfile  README.md  pyproject.toml
backend/app/: __init__.py  config.py  database.py  db_models.py  emailing.py  main.py  models.py  security.py  time_tracking.py
frontend/: Dockerfile  index.html  package-lock.json  package.json
frontend/public/: manifest.webmanifest  sw.js
frontend/src/: App.tsx  i18n.ts  main.tsx  styles.css
scripts/: dev-wsl.sh
